--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@ngrx/store": "^16.3.0",
+    "@nguniversal/express-engine": "^16.2.0",
     "bootstrap": "^3.4.1",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
