--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run BasicAngularProject:serve-ssr",
+    "serve:ssr": "node dist/BasicAngularProject/server/main.js",
+    "build:ssr": "ng build && ng run BasicAngularProject:server",
+    "prerender": "ng run BasicAngularProject:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,9 +21,12 @@
     "@angular/forms": "^16.1.0",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
+    "@angular/platform-server": "^16.2.12",
     "@angular/router": "^16.1.0",
     "@ngrx/store": "^16.3.0",
+    "@nguniversal/express-engine": "^16.2.0",
     "bootstrap": "^3.4.1",
+    "express": "^4.15.2",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
@@ -29,7 +36,10 @@
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
+    "@nguniversal/builders": "^16.2.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^16.11.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
